--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     async function main() {
-      await liff.init({ liffId: "你的LIFF ID" }); // 👈 等你有 LIFF ID 再貼
+      await liff.init({ liffId: "2007661360-L4Z9V49Z" }); // 👈 等你有 LIFF ID 再貼
       navigator.geolocation.getCurrentPosition(async position => {
         const lat = position.coords.latitude;
         const lng = position.coords.longitude;
